--- a/style.css
+++ b/style.css
@@ -22,8 +22,8 @@ hr{
     margin-top: 10%;
 }
 .footer{
-    height: 5%;
-    width: 5%;
+    height: 25%;
+    width: 25%;
     display: flex;
     flex-direction: row;  
     padding: 0% 35%;
@@ -31,6 +31,8 @@ hr{
 }
 img {
     max-width: 100%;
-    max-height: 100%;
-    margin: 0% 15%;
+    max-height: 100%;   
+}
+.imagens{
+    margin: 2% 2%;
 }
